# a3

./: .gitignore  Makefile  README.md
.github/workflows/: TagBot.yml  jsr-publish.yml  julia-ci.yml  python-ci.yml  r-ci.yml  rust-ci.yml  typescript-ci.yml
examples/: mapt.a3.json  mapt_annot_a3.json  mapt_cleavage_a3.json
julia/: .gitignore  README.md
julia/RtemisA3/: Manifest.toml  Project.toml
julia/RtemisA3/docs/: Project.toml  make.jl
julia/RtemisA3/docs/src/: index.md
julia/RtemisA3/src/: RtemisA3.jl  api.jl  errors.jl  io.jl  normalize.jl  types.jl  validate.jl
julia/RtemisA3/test/: runtests.jl
python/: .gitignore  README.md
python/rtemis_a3/: README.md  mkdocs.yml  pyproject.toml  zensical.toml
python/rtemis_a3/docs/: api.md  index.md
python/rtemis_a3/src/rtemis/a3/: __init__.py  _models.py  _normalize.py  api.py  errors.py
python/rtemis_a3/src/rtemis_a3/: __init__.py  _normalize.py  api.py  errors.py  io.py
python/rtemis_a3/tests/: test_api.py  test_models.py  test_normalize.py  test_roundtrip.py
r/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cran-comments.md
r/R/: 0_init.R  1_init.R  a3-package.R  a3.R  gene2sequence.R  metrics.R  rtemis_color_system.R  uniprot_get.R  utils_a3.R  utils_clinvar.R  utils_pdb.R  utils_uniprot.R  zzz.R
r/inst/resources/: rtemis.a3.utf8
r/man/: aa_sub.Rd  annotation_position.Rd  annotation_range.Rd  annotation_variant.Rd  as_A3.Rd  clinvar_variants.Rd  concat.Rd  create_A3.Rd  gene2sequence.Rd  get_alphafold.Rd  green.Rd  pdb_annotations.Rd  plot.A3.Rd  read_A3json.Rd  rtemis.a3-package.Rd  summary.A3.Rd  uniprot_get.Rd  uniprot_sequence.Rd  uniprot_to_A3.Rd  write_A3json.Rd
r/specs/: A3_S7.md
r/tests/: testthat.R
r/tests/testthat/: test_A3.R  test_utils.R
rust/: .gitignore  Cargo.toml  README.md
rust/.cargo/: config.toml
rust/src/: diagnostic.rs  error.rs  lib.rs  main.rs  normalization.rs  normalize.rs  types.rs  validate.rs  validation.rs
rust/tests/: cli.rs
schema/: a3.schema.json
specs/: A3.md  A3_Julia.md  A3_Pydantic.md  A3_Rust.md  A3_S7.md  A3_zod.md  a3.md  cli.md  clinvar.md  colors.md  diagnostic.md  goals.md  pdb.md  uniprot.md
typescript/: .gitignore  README.md  biome.json  jsr.json  package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/: a3.ts  index-browser.ts  index.ts  io.ts  normalize.ts  parse.ts  schemas.ts
typescript/tests/: a3.test.ts  normalize.test.ts  parse.test.ts  roundtrip.test.ts  schemas.test.ts
