[package]
name = "rtemis-a3"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Rust implementation of the A3 (Amino Acid Annotation) format — parse, validate, and inspect A3 JSON files"
license = "MPL-2.0"
repository = "https://github.com/rtemis-org/a3"
homepage = "https://a3.rtemis.org"
documentation = "https://docs.rs/rtemis-a3"
readme = "README.md"
keywords = ["bioinformatics", "protein", "amino-acid", "proteomics", "json"]
categories = ["science::bioinformatics::proteomics", "parser-implementations", "command-line-utilities"]

[[bin]]
name = "a3"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
