[project]
name = "rtemis-a3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stathis Gennatas", email = "gennatas@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ty.environment]
python = ".venv"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
