[project]
name = "rtemis-a3"
version = "0.1.0"
description = "Python implementation of the Amino Acid Annotation (A3) format"
readme = "README.md"
license = { text = "MPL-2.0" }
authors = [
    { name = "E.D. Gennatas", email = "gennatas@gmail.com" }
]
keywords = ["bioinformatics", "proteomics", "amino acid", "annotation", "protein"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/rtemis-org/a3"
Repository = "https://github.com/rtemis-org/a3"
Issues = "https://github.com/rtemis-org/a3/issues"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "rtemis.a3"

[tool.ty.environment]
python = ".venv"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mkdocstrings-python>=2.0.3",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
    "zensical>=0.0.30",
]
